# miniupnp

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING  LICENSE  README  README.md  SECURITY.md  appveyor.yml  miniupnp.podspec
.github/actions/: readme.md
.github/actions/activate-venv/: action.yml  activate_venv.py  readme.md  test_check_activated.py
.github/actions/create-venv/: action.yml  create_temporary_venv.py  readme.md
.github/workflows/: codeql-analysis.yml  i586-mingw32msvc.yml  i686-w64-mingw32.yml  main.yml  mingw.yml  miniupnpc_wheels.yml  miniupnpd.yml  x86_64-w64-mingw32.yml
minissdpd/: .gitignore  CHANGELOG.md  Changelog.txt  LICENSE  Makefile  Makefile.am  README  README.fr  asyncsendto.c  config.h  configure.ac  daemonize.c  daemonize.h  getifaddr.c  getifaddr.h  getroute.c  ifacewatch.c  ifacewatch.h  listifaces.c  minissdpd.1  minissdpd.c  minissdpd.init.d.script  openssdpsocket.c  openssdpsocket.h  printresponse.c  showminissdpdnotif.c  submit_to_minissdpd.py  testcodelength.c  testminissdpd.c  testminissdpd.sh  testminissdpdnotif.sh  upnputils.c  upnputils.h
miniupnpc/: .gitignore  CHANGELOG.md  CMakeLists.txt  Changelog.txt  DESCRIPTION  Doxyfile  LICENSE  MANIFEST.in  Makefile  Makefile.mingw  README  addr_is_reserved.c  apiversions.txt  connecthostport.c  connecthostport.h  declspec.h  listdevices.c  minihttptestserver.c  minisoap.c  minisoap.h  minissdpc.c  minissdpc.h  miniupnpc.c  miniupnpc.h  miniupnpc.pc.in  miniupnpcmodule.c  miniupnpcstrings.h.cmake  miniupnpcstrings.h.in  miniwget.c  miniwget.h  minixmlvalid.c  portlistingparse.c  portlistingparse.h  pymoduletest.py  receivedata.c  receivedata.h  setup.py  setupmingw32.py  socketdef.h  testigddescparse.c  (+17 more)
miniupnpc-async/: Makefile  miniupnpc-async.c  miniupnpc-async.h  parsessdpreply.c  testasync.c
miniupnpc-libevent/: Makefile  README  declspec.h  miniupnpc-libevent.c  miniupnpc-libevent.h  upnpc-libevent.c
miniupnpc-libuv/: .gitignore  Makefile  README  example.c  minissdpc-libuv.c  minissdpc-libuv.h  upnpdev.h
miniupnpc/include/: igd_desc_parse.h  miniupnpc.h  miniupnpctypes.h  miniwget.h  upnpcommands.h  upnpdev.h  upnperrors.h  upnpreplyparse.h
miniupnpc/java/: JavaBridgeTest.java
miniupnpc/man3/: miniupnpc.3
miniupnpc/msvc/: .gitignore  genminiupnpcstrings.vbs  miniupnpc.rc  miniupnpc.vcproj  miniupnpc.vcxproj  miniupnpc.vcxproj.filters  miniupnpc_vs2010.vcxproj  miniupnpc_vs2010.vcxproj.filters  rcVersion.h  upnpc-static.vcproj  upnpc-static.vcxproj  upnpc-static.vcxproj.filters  upnpc-static_vs2010.vcxproj
miniupnpc/src/: addr_is_reserved.c  connecthostport.c  minisoap.c  minissdpc.c  miniupnpc.c  miniupnpcmodule.c  miniwget.c  miniwget_private.h  receivedata.c  testaddr_is_reserved.c  testigddescparse.c  testminixml.c  upnpc.c  upnpcommands.c  upnpdev.c  upnperrors.c
miniupnpc/testreplyparse/: GetSpecificPortMappingEntryResp.namevalue  GetSpecificPortMappingEntryResp.xml
miniupnpd/: .gitignore  CHANGELOG.md  Changelog.txt  Doxyfile  EXTERNAL_SCRIPT_README.md  INSTALL  Makefile  Makefile.bsd  Makefile.linux  Makefile.linux-ix2015  Makefile.linux_nft  Makefile.macosx  Makefile.solaris-ix2015  Makefile.sunos  README  TODO  asyncsendto.c  asyncsendto.h  build.sh  commonrdr.h  config.h  config.h-linux-ix2015  config.h-solaris-ix2015  configlocations.c  configlocations.h  configure  genconfig.sh  getconnstatus.c  getconnstatus.h  getifaddr.c  getifaddr.h  getroute.h  gitrev.mk  ifacewatcher.h  macros.h  minissdp.c  minissdp.h  miniupnpd-firewall-script-example.sh  miniupnpd.1  miniupnpd.8  (+53 more)
miniupnpd/bsd/: getifstats.c  getroute.c  ifacewatcher.c
miniupnpd/ipf/: ipfrdr.c  ipfrdr.h
miniupnpd/ipfw/: ipfwaux.h  ipfwrdr.c  ipfwrdr.h
miniupnpd/ix2015/: Makefile  README.txt  ipfwaux.h  ipfwrdr.c  ipfwrdr.h  ix2015-func.c  readme-api.txt  test-strerror.c  testipfwrdr.c  upnp-auxiliary.pl-dummy  upnp-auxiliary.pl-real
miniupnpd/linux/: getifstats.c  getroute.c  ifacewatcher.c  miniupnpd.init.d.script
miniupnpd/mac/: getifstats.c
miniupnpd/miniupnpd-custom/DEBIAN/: conffiles  config  control  md5sums  postinst  postrm  preinst  templates
miniupnpd/miniupnpd-custom/lib/systemd/system/: miniupnpd.service
miniupnpd/miniupnpd-custom/usr/libexec/: miniupnpd-startstop-helper.sh
miniupnpd/miniupnpd-custom/usr/share/doc/miniupnpd-nftables/: copyright
miniupnpd/netfilter/: Makefile  extscriptrdr.c  extscriptrdr.h  iptables_display.sh  iptables_init.sh  iptables_init_and_clean.sh  iptcrdr.c  iptcrdr.h  iptpinhole.c  iptpinhole.h  testiptcrdr.c
miniupnpd/netfilter_nft/: Makefile  README  README.md  nftnlrdr.c  nftnlrdr.h  nftnlrdr_misc.c  nftnlrdr_misc.h  nftpinhole.c  testnftnlrdr.c  testnftpinhole.c
miniupnpd/netfilter_nft/scripts/: miniupnpd_functions.sh  nft_delete_chain.sh  nft_display.sh  nft_flush.sh  nft_init.sh  nft_removeall.sh
miniupnpd/pf/: obsdrdr.c  obsdrdr.h  pfpinhole.c  pfpinhole.h  testobsdrdr.c  testpfpinhole.c
